--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,10 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-	</properties>
+        <flyway-maven-plugin.version>4.2.0</flyway-maven-plugin.version>
+        <spring-boot-maven-plugin.version>2.1.8.RELEASE</spring-boot-maven-plugin.version>
+        <h2.version>1.4.191</h2.version>
+    </properties>
 
 	<dependencies>
 		<dependency>
@@ -60,12 +63,19 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${spring-boot-maven-plugin.version}</version>
+				<configuration>
+					<outputDirectory>dist</outputDirectory>
+					<jvmArguments>
+						-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
+					</jvmArguments>
+				</configuration>
 			</plugin>
 
 			<plugin>
 				<groupId>org.flywaydb</groupId>
 				<artifactId>flyway-maven-plugin</artifactId>
-				<version>4.2.0</version>
+				<version>${flyway-maven-plugin.version}</version>
 				<configuration>
 					<url>jdbc:h2:file:./target/foobar</url>
 					<user>sa</user>
@@ -74,7 +84,7 @@
 					<dependency>
 						<groupId>com.h2database</groupId>
 						<artifactId>h2</artifactId>
-						<version>1.4.191</version>
+						<version>${h2.version}</version>
 					</dependency>
 				</dependencies>
 			</plugin>
